# tocken

./: .gitignore  CMakeLists.txt  Makefile  README.md
demo/: main.cpp
include/: probs.hpp  tocken.hpp
source/: test.txt
src/: Makefile  hmmtocken.cpp  hmmtocken.hpp  main.cpp  probs.cpp  tocken.cpp  tocken.hpp  utils.cpp
tocken/tocken/: hash_table.c  hash_table.h  hmmtocken.cpp  hmmtocken.hpp  main.cpp  prime.c  prime.h  probs.cpp  probs.hpp  tocken.cpp  tocken.hpp  utils.hpp
tocken/tocken.xcodeproj/: project.pbxproj
tocken/tocken.xcodeproj/project.xcworkspace/xcuserdata/AirChen.xcuserdatad/: UserInterfaceState.xcuserstate
tocken/tocken.xcodeproj/xcshareddata/xcschemes/: tocken.xcscheme
tocken/tocken.xcodeproj/xcuserdata/AirChen.xcuserdatad/xcschemes/: xcschememanagement.plist
